# framework.api.data-control

include/: data_control_internal.h  data_control_map.h  data_control_provider.h  data_control_sql.h  data_control_sql_cursor.h  data_control_types.h
packaging/: capi-data-control.spec
src/: CMakeLists.txt  data_control_internal.c  data_control_log.h  data_control_map.c  data_control_provider.c  data_control_sql.c
